apps/kopic/dev/client/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kopic-dev-client
  labels:
    app: kopic-dev-client
spec:
  type: ClusterIP
  selector:
    app: kopic-dev-client
  ports:
  - name: http
    port: 80
    targetPort: 80
